force-app/main/default/objects/Wiki_Record_Page__c/Wiki_Record_Page__c.object-meta.xml
<CustomObject>
    <description>Represents a wiki record page.</description>
    <label>Wiki Record Page</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Wiki Record Pages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>