force-app/main/default/objects/Wiki_Record_Page__c/fields/Parent_Page__c.field-meta.xml
<CustomField>
    <fullName>Parent_Page__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The parent page of the wiki record page.</description>
    <label>Parent Page</label>
    <referenceTo>Wiki_Record_Page__c</referenceTo>
    <relationshipLabel>Wiki Record Pages</relationshipLabel>
    <relationshipName>Wiki_Record_Pages</relationshipName>
    <type>Lookup</type>
</CustomField>