force-app/main/default/objects/Wiki_Record_Page__c/fields/Record_ID__c.field-meta.xml
<CustomField>
    <fullName>Record_ID__c</fullName>
    <description>The unique identifier for the wiki record page.</description>
    <label>Record ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>